# CMake-Project-Template

./: CMakeLists.txt
apps/: CMakeLists.txt  app.cpp
src/: CMakeLists.txt
src/pws/: CMakeLists.txt  lib.cpp  lib.hpp
src/pws/MPI/: CMakeLists.txt  hello_mpi.cpp  hello_mpi.hpp
tests/: CMakeLists.txt  testlib.cpp
